creation du header et footer

--- a/page-commande.html
+++ b/page-commande.html
@@ -13,16 +13,34 @@
 
 <body>
 	<header>
-		
+		<div class="container">
+			<div class="flex-nav">
+				<a href="index.html"> <img src="img/logo.png" alt="Accueil"></a>
+				<nav>
+					<ul>
+						<li><a href="index.html">Menu</a></li>
+						<li><a href="page-reservation.html">Réservation</a></li>
+						<li><a href="page-restaurant.html">Restaurant</a></li>
+						<li class="actuelle"><a href="page-commande.html">Ma commande</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+	</header>
 	</header>
 
 	<main>
 
 	</main>
 
-	<footer>
-	
+	<footer class="footer">
+		<div class="container">
+			<div>
+				<p>Site réalisé par <b>Valérie Houle</b> | Dans le cadre du cours Techniques d'intégration des interfaces Web - Cégep de Trois-Rivières</p>
+			</div>
+		</div>
 	</footer>
+
 
 </body>
 
