--- a/page-restaurant.html
+++ b/page-restaurant.html
@@ -11,32 +11,42 @@
 	<link rel="icon" href="img/favicon.png">
 </head> 
 
-<body>
+<body class="container">
 	<header>
-		<div class="container">
-			<div class="flex-nav">
-				<a href="index.html"> <img src="img/logo.png" alt="Accueil"></a>
-				<nav>
-					<ul>
-						<l><a href="index.html">Menu</a></li>
-						<li><a href="page-reservation.html">Réservation</a></li>
-						<li class="actuelle"><a href="page-restaurant.html">Restaurant</a></li>
-						<li><a href="page-commande.html">Ma commande</a></li>
-					</ul>
-				</nav>
-			</div>
+		<div class="flex-nav">
+			<a href="index.html"> <img src="img/logo.png" alt="Accueil"></a>
+			<nav>
+				<ul>
+					<li><a href="index.html">Menu</a></li>
+					<li><a href="page-reservation.html">Réservation</a></li>
+					<li class="actuelle"><a href="page-restaurant.html">Restaurant</a></li>
+					<li><a href="page-commande.html">Ma commande</a></li>
+				</ul>
+			</nav>
 		</div>
 	</header>
 
 	<main>
-
-	</main>
+		<h1>LE RESTAURANT</h1>
+		<ul class="grid-container">
+			<li id="mos1"><img src="img/mosaique/mosaique-1.png" alt="">
+			</li>
+			<li id="mos2"><img src="img/mosaique/mosaique-2.png" alt="">
+			</li>
+			<li id="mos3"><img src="img/mosaique/mosaique-3.png" alt="">
+			</li>
+			<li><img id="mos4" src="img/mosaique/mosaique-4.png" alt="">
+			</li>
+			<li id="mos5"><img src="img/mosaique/mosaique-5.png" alt="">
+			</li>
+			<li id="mos6"><img src="img/mosaique/mosaique-6.png" alt="">
+			</li>
+		</ul>
+	</main> 
 
 	<footer class="footer">
-		<div class="container">
-			<div>
-				<p>Site réalisé par <b>Valérie Houle</b> | Dans le cadre du cours Techniques d'intégration des interfaces Web - Cégep de Trois-Rivières</p>
-			</div>
+		<div>
+			<p>Site réalisé par <b>Valérie Houle</b> | Dans le cadre du cours Techniques d'intégration des interfaces Web - Cégep de Trois-Rivières</p>
 		</div>
 	</footer>
 
