Page commande - intégration du squelette

--- a/page-commande.html
+++ b/page-commande.html
@@ -11,33 +11,84 @@
 	<link rel="icon" href="img/favicon.png">
 </head> 
 
-<body>
+<body class="container">
 	<header>
-		<div class="container">
-			<div class="flex-nav">
-				<a href="index.html"> <img src="img/logo.png" alt="Accueil"></a>
-				<nav>
-					<ul>
-						<li><a href="index.html">Menu</a></li>
-						<li><a href="page-reservation.html">Réservation</a></li>
-						<li><a href="page-restaurant.html">Restaurant</a></li>
-						<li class="actuelle"><a href="page-commande.html">Ma commande</a></li>
-					</ul>
-				</nav>
-			</div>
+		<div class="flex-nav">
+			<a href="index.html"> <img src="img/logo.png" alt="Accueil"></a>
+			<nav>
+				<ul>
+					<li><a href="index.html">Menu</a></li>
+					<li><a href="page-reservation.html">Réservation</a></li>
+					<li class="actuelle"><a href="page-restaurant.html">Restaurant</a></li>
+					<li><a href="page-commande.html">Ma commande</a></li>
+				</ul>
+			</nav>
 		</div>
-	</header>
 	</header>
 
 	<main>
+		<h1>MA COMMANDE</h1>
+		<section id="ma-commande">
+		<div>
+			<h2>Burgers</h2>
+			<div class="flex-container-com">
+				<ul class="flex-item">
+					<li>Le Commodo | 9,99$</li>
+					<li>Le Lorem | 12,99$</li>
+				</ul>
+				<ul class="flex-item">
+					<li>Quantité : 1</li>
+					<li>Quantité : 1</li>
+				</ul>
+			</div>
+			<h2>Beignes</h2>
+			<div class="flex-container-com">
+				<ul class="flex-item">
+					<li>Le Etiam | 3,99$</li>
+					<li>Le Maximus | 2,99$</li>
+				</ul>
+				<ul class="flex-item">
+					<li>Quantité : 1</li>
+					<li>Quantité : 1</li>
+				</ul>
+			</div>
+		</div>	
+		<div>
+			<h2>Détails</h2>
+			<div class="flex-container-detail">		
+				<ul class="flex-item">
+					<li><b>Sous-total</b></li>
+					<li><b>Taxes</b></li>
+					<li><b>Total</b></li>
+					<li class="btn-commander">Commander</li>
+				</ul>
+				<ul class="flex-item">
+					<li>29,96$</li>
+					<li>4,49$</li>
+					<li>34,45$</li>
+				</ul>
+			</div>
+		</div>
+		</section>
 
-	</main>
+		<section id="t-shirt">
+				<div class="flex-container">
+					<div class="flex-t-shirt">
+						<h2>LE T-SHIRT BURGER SHOP</h2>
+						<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
+						<a class="btn-panier" href="">Ajouter au panier</a>
+					</div>
+					<div>
+						<img src="img/t-shirt.png" alt="">
+					</div>
+				</div>
+		</section>
+	
+	</main> 
 
 	<footer class="footer">
-		<div class="container">
-			<div>
-				<p>Site réalisé par <b>Valérie Houle</b> | Dans le cadre du cours Techniques d'intégration des interfaces Web - Cégep de Trois-Rivières</p>
-			</div>
+		<div>
+			<p>Site réalisé par <b>Valérie Houle</b> | Dans le cadre du cours Techniques d'intégration des interfaces Web - Cégep de Trois-Rivières</p>
 		</div>
 	</footer>
 
