Page commande - intégration du squelette

--- a/page-restaurant.html
+++ b/page-restaurant.html
@@ -28,7 +28,7 @@
 
 	<main>
 		<h1>LE RESTAURANT</h1>
-		<ul class="grid-container">
+		<ul class="grid-container-mos">
 			<li id="mos1"><img src="img/mosaique/mosaique-1.png" alt="">
 			</li>
 			<li id="mos2"><img src="img/mosaique/mosaique-2.png" alt="">
