--- a/index.html
+++ b/index.html
@@ -11,20 +11,18 @@
 	<link rel="icon" href="img/favicon.png">
 </head> 
 
-<body>
+<body class="container">
 	<header>
-		<div class="container">
-			<div class="flex-nav">
-				<a href="index.html"> <img src="img/logo.png" alt="Accueil"></a>
-				<nav>
-					<ul>
-						<li class="actuelle"><a href="index.html">Menu</a></li>
-						<li><a href="page-reservation.html">Réservation</a></li>
-						<li><a href="page-restaurant.html">Restaurant</a></li>
-						<li><a href="page-commande.html">Ma commande</a></li>
-					</ul>
-				</nav>
-			</div>
+		<div class="flex-nav">
+			<a href="index.html"> <img src="img/logo.png" alt="Accueil"></a>
+			<nav>
+				<ul>
+					<li><a href="index.html">Menu</a></li>
+					<li><a href="page-reservation.html">Réservation</a></li>
+					<li class="actuelle"><a href="page-restaurant.html">Restaurant</a></li>
+					<li><a href="page-commande.html">Ma commande</a></li>
+				</ul>
+			</nav>
 		</div>
 	</header>
 
@@ -33,10 +31,8 @@
 	</main>
 
 	<footer class="footer">
-		<div class="container">
-			<div>
-				<p>Site réalisé par <b>Valérie Houle</b> | Dans le cadre du cours Techniques d'intégration des interfaces Web - Cégep de Trois-Rivières</p>
-			</div>
+		<div>
+			<p>Site réalisé par <b>Valérie Houle</b> | Dans le cadre du cours Techniques d'intégration des interfaces Web - Cégep de Trois-Rivières</p>
 		</div>
 	</footer>
 
