--- a/page-reservation.html
+++ b/page-reservation.html
@@ -11,9 +11,9 @@
 	<link rel="icon" href="img/favicon.png">
 </head> 
 
-<body>
+<body class="container">
 	<header>
-		<div class="container">
+		<div>
 			<div class="flex-nav">
 				<a href="index.html"> <img src="img/logo.png" alt="Accueil"></a>
 				<nav>
@@ -33,10 +33,8 @@
 	</main>
 
 	<footer class="footer">
-		<div class="container">
-			<div>
-				<p>Site réalisé par <b>Valérie Houle</b> | Dans le cadre du cours Techniques d'intégration des interfaces Web - Cégep de Trois-Rivières</p>
-			</div>
+		<div>
+			<p>Site réalisé par <b>Valérie Houle</b> | Dans le cadre du cours Techniques d'intégration des interfaces Web - Cégep de Trois-Rivières</p>
 		</div>
 	</footer>
 
