--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<a href="index.html"> <img src="img/logo.png" alt="Accueil"></a>
 			<nav>
 				<ul>
-					<li><a href="index.html">Menu</a></li>
+					<li class="actuelle"><a href="index.html">Menu</a></li>
 					<li><a href="page-reservation.html">Réservation</a></li>
-					<li class="actuelle"><a href="page-restaurant.html">Restaurant</a></li>
+					<li><a href="page-restaurant.html">Restaurant</a></li>
 					<li><a href="page-commande.html">Ma commande</a></li>
 				</ul>
 			</nav>
@@ -27,7 +27,74 @@
 	</header>
 
 	<main>
+		<h1>MENU</h1>
+		<h2>NOS BURGERS</h2>
+			<div class="flex-container-menu">
+				<div class="flex-menu">
+					<img src="img/menu/commodo.png" alt="le-commodo">
+					<h3>Le Commodo</h3>
+					<p>9,99 $</p>
+					<a class="btn" href="#">Ajouter au panier</a>
+				</div>
+				<div class="flex-menu">
+					<img src="img/menu/lorem.png" alt="le-lorem">
+					<h3>Le Lorem</h3>
+					<p>12,99 $</p>
+					<a class="btn" href="#">Ajouter au panier</a>
+				</div>
+				<div class="flex-menu">
+					<img src="img/menu/dolar-met.png" alt="le-dolar-met">
+					<h3>Le Dolar Met</h3>
+					<p>8,99 $</p>
+					<a class="btn" href="#">Ajouter au panier</a>
+				</div>
+				<div class="flex-menu">
+					<img src="img/menu/fugiat.png" alt="le-fugiat">
+					<h3>Le Fugiat</h3>
+					<p>11,99 $</p>
+					<a class="btn" href="#">Ajouter au panier</a>
+				</div>
+				<div class="flex-menu">
+					<img src="img/menu/laboris.png" alt="le-laboris">
+					<h3>Le Laboris</h3>
+					<p>12,99 $</p>
+					<a class="btn" href="#">Ajouter au panier</a>
+				</div>
+				<div class="flex-menu">
+					<img src="img/menu/cubidatat.png" alt="le-cubidatat">
+					<h3>Le Cubidatat</h3>
+					<p>14,99 $</p>
+					<a class="btn" href="#">Ajouter au panier</a>
+				</div>
+			</div>
 
+		<h2>NOS BEIGNES</h2>
+		<div class="flex-container-menu">
+			<div class="flex-menu">
+				<img src="img/menu/etiam.png" alt="le-etiam">
+				<h3>Le Etiam</h3>
+				<p>3,99 $</p>
+				<a class="btn" href="#">Ajouter au panier</a>
+			</div>
+			<div class="flex-menu">
+				<img src="img/menu/malesuada.png" alt="le-malesuada">
+				<h3>Le Malesuada</h3>
+				<p>2,99 $</p>
+				<a class="btn" href="#">Ajouter au panier</a>
+			</div>
+			<div class="flex-menu">
+				<img src="img/menu/vestibulum.png" alt="le-vestibulum">
+				<h3>Le Vestibulum</h3>
+				<p>1,99 $</p>
+				<a class="btn" href="#">Ajouter au panier</a>
+			</div>
+			<div class="flex-menu">
+				<img src="img/menu/maximus.png" alt="le-maximus">
+				<h3>Le Maximus</h3>
+				<p>2,99 $</p>
+				<a class="btn" href="#">Ajouter au panier</a>
+			</div>
+		</div>
 	</main>
 
 	<footer class="footer">
