Page restaurant - integration media queries

--- a/page-commande.html
+++ b/page-commande.html
@@ -74,7 +74,7 @@
 				</ul>
 			</div>
 			<div class="flex-container-com-total">
-				<a class="btn-commander" href="#">Commander</a>
+				<a class="btn" href="#">Commander</a>
 			</div>
 		</div>
 		</section>
