--- a/page-restaurant.html
+++ b/page-restaurant.html
@@ -11,22 +11,24 @@
 	<link rel="icon" href="img/favicon.png">
 </head> 
 
-<body class="container">
+<body>
 	<header>
+		<div class="container">
 		<div class="flex-nav">
 			<a href="index.html"> <img src="img/logo.png" alt="Accueil"></a>
 			<nav>
 				<ul>
-					<li><a href="index.html">Menu</a></li>
-					<li><a href="page-reservation.html">Réservation</a></li>
-					<li class="actuelle"><a href="page-restaurant.html">Restaurant</a></li>
-					<li><a href="page-commande.html">Ma commande</a></li>
+					<li><a href="index.html">menu</a></li>
+					<li><a href="page-reservation.html">réservation</a></li>
+					<li><a class="actuelle" href="page-restaurant.html">restaurant</a></li>
+					<li><a class="btn-commande" href="page-commande.html">ma commande</a></li>
 				</ul>
 			</nav>
 		</div>
+		</div>
 	</header>
 
-	<main>
+	<main class="container">
 		<h1>LE RESTAURANT</h1>
 		<ul class="grid-container-mos">
 			<li id="mos1"><img src="img/mosaique/mosaique-1.png" alt="">
