--- a/confirmation.html
+++ b/confirmation.html
@@ -11,24 +11,26 @@
 	<link rel="icon" href="img/favicon.png">
 </head>
 
-<body class="container">
+<body>
 	<header>
-		<div class="flex-nav">
+		<div class="container">
+		<div class="flex-nav" >
 			<a href="index.html"> <img src="img/logo.png" alt="Accueil"></a>
 			<nav>
 				<ul>
-					<li class="actuelle"><a href="index.html">Menu</a></li>
-					<li><a href="page-reservation.html">Réservation</a></li>
-					<li><a href="page-restaurant.html">Restaurant</a></li>
-					<li><a href="page-commande.html">Ma commande</a></li>
+					<li><a href="index.html">menu</a></li>
+					<li><a href="page-reservation.html">réservation</a></li>
+					<li><a href="page-restaurant.html">restaurant</a></li>
+					<li><a class="btn-commande" href="page-commande.html">ma commande</a></li>
 				</ul>
 			</nav>
 		</div>
+		</div>
 	</header>
 
-    <main>
+    <main class="container">
         <h1>Votre réservation est confirmée</h1>
-        <a class="btn" href="index.html">Retourner à la page d'accueil</a>
+        <a class="btn" href="index.html">retourner à la page d'accueil</a>
     </main>
 
     <footer class="footer">
