intégration du menu mobile (menu burger)

--- a/page-commande.html
+++ b/page-commande.html
@@ -14,17 +14,18 @@
 <body>
 	<header>
 		<div class="container">
-		<div class="flex-nav">
-			<a href="index.html"> <img src="img/logo.png" alt="Accueil"></a>
-			<nav>
-				<ul>
-					<li><a href="index.html">menu</a></li>
-					<li><a href="page-reservation.html">réservation</a></li>
-					<li><a href="page-restaurant.html">restaurant</a></li>
-					<li><a class="btn-commande"	href="page-commande.html">ma commande</a></li>
-				</ul>
-			</nav>
-		</div>
+			<div class="flex-nav" >
+				<a id="logo" href="index.html"> <img src="img/logo.png" alt="Accueil"></a>
+				<nav>
+					<ul>
+						<li><a class="actuelle" href="index.html">menu</a></li>
+						<li><a href="page-reservation.html">réservation</a></li>
+						<li><a href="page-restaurant.html">restaurant</a></li>
+						<li><a class="btn-commande" href="page-commande.html">ma commande</a></li>
+					</ul>
+				</nav>
+				<a id="menu-mobile" href="#"> <img src="img/menu-mobile.png" alt="menu-mobile"> </a>
+			</div>
 		</div>
 	</header>
 
@@ -77,7 +78,7 @@
 				</ul>
 			</div>
 			<div class="flex-container-com-total">
-				<a class="btn" href="#">Commander</a>
+				<a class="btn-commander" href="#">commander</a>
 			</div>
 			</div>
 		</div>
@@ -90,7 +91,7 @@
 						<h2>LE T-SHIRT BURGER SHOP</h2>
 						<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
 						
-						<a class="btn" href="">Ajouter au panier</a>
+						<a class="btn" href="">ajouter au panier</a>
 					</div>
 					
 						<img src="img/t-shirt-removebg-preview.png" alt="">
