--- a/page-reservation.html
+++ b/page-reservation.html
@@ -14,17 +14,18 @@
 <body>
 	<header>
 		<div class="container">
-		<div class="flex-nav">
-			<a href="index.html"> <img src="img/logo.png" alt="Accueil"></a>
-			<nav>
-				<ul>
-					<li><a href="index.html">menu</a></li>
-					<li><a class="actuelle" href="page-reservation.html">réservation</a></li>
-					<li><a href="page-restaurant.html">restaurant</a></li>
-					<li><a class="btn-commande" href="page-commande.html">ma commande</a></li>
-				</ul>
-			</nav>
-		</div>
+			<div class="flex-nav" >
+				<a id="logo" href="index.html"> <img src="img/logo.png" alt="Accueil"></a>
+				<nav>
+					<ul>
+						<li><a class="actuelle" href="index.html">menu</a></li>
+						<li><a href="page-reservation.html">réservation</a></li>
+						<li><a href="page-restaurant.html">restaurant</a></li>
+						<li><a class="btn-commande" href="page-commande.html">ma commande</a></li>
+					</ul>
+				</nav>
+				<a id="menu-mobile" href="#"> <img src="img/menu-mobile.png" alt="menu-mobile"> </a>
+			</div>
 		</div>
 	</header>
 
