intégration du footer

--- a/page-reservation.html
+++ b/page-reservation.html
@@ -54,10 +54,10 @@
 					<input type="checkbox" name="chkbox" id="chkbox">
 					<label for="chkbox">M'abonner à l'infolettre</label>
 				</div>
-		</fieldset>
+			</fieldset>
 		
-		<fieldset class="width50">
-			<legend>Détails de la réservation</legend>
+			<fieldset class="width50">
+				<legend>Détails de la réservation</legend>
 				<div class="etiquette">
 					<label for="nbrPersonnes">Nombre de personnes</label>
 					<input type="number" name="nbrPersonnes" id="nbrPersonnes" value="1" min="1" max="10" class="width50" required>
@@ -103,34 +103,31 @@
 				<div>
 					<input class="btn" type="submit" name="btnSubmit" id="btnSubmit" value="soumettre">
 				</div>
-		</fieldset>
-		
-		
-
-		
-		
-		
-
-		
-
-		
-
-		
-
-
-		
-		
-
+			</fieldset>
 		</form>
 	
 	</main>
 
-	<footer class="footer">
-		<div>
-			<p>Site réalisé par <b>Valérie Houle</b> | Dans le cadre du cours Techniques d'intégration des interfaces Web - Cégep de Trois-Rivières</p>
+	<footer>
+		<section id="footer-black">
+			<div class="container">
+				<div class="flex-footer">
+					<div class="contact">
+						<p><b>Burger Shop</b> : 3175 Boul. Laviolette, Trois-Rivières, QC</p>
+					</div>
+					<div>
+						<a class="btn-tel" href="tel:+4181234567">418-123-4567</a>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<div class="container">
+			<div class="mon-nom">
+				<p>Site réalisé par <b>Valérie Houle</b> | Dans le cadre du cours Techniques d'intégration des interfaces Web - Cégep de Trois-Rivières</p>
+			</div>
 		</div>
 	</footer>
-
 
 </body>
 
