--- a/page-restaurant.html
+++ b/page-restaurant.html
@@ -47,12 +47,26 @@
 		</ul>
 	</main> 
 
-	<footer class="footer">
-		<div>
-			<p>Site réalisé par <b>Valérie Houle</b> | Dans le cadre du cours Techniques d'intégration des interfaces Web - Cégep de Trois-Rivières</p>
+	<footer>
+		<section id="footer-black">
+			<div class="container">
+				<div class="flex-footer">
+					<div class="contact">
+						<p><b>Burger Shop</b> : 3175 Boul. Laviolette, Trois-Rivières, QC</p>
+					</div>
+					<div>
+						<a class="btn-tel" href="tel:+4181234567">418-123-4567</a>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<div class="container">
+			<div class="mon-nom">
+				<p>Site réalisé par <b>Valérie Houle</b> | Dans le cadre du cours Techniques d'intégration des interfaces Web - Cégep de Trois-Rivières</p>
+			</div>
 		</div>
 	</footer>
-
 
 </body>
 
