validation du html et CSS

--- a/confirmation.html
+++ b/confirmation.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Burger Shop - Réservation</title>
-	<meta name="description" content="reservation">
+	<title>Burger Shop - Confirmation</title>
+	<meta name="description" content="confirmation">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/styles.css">
@@ -30,8 +30,12 @@
 	</header>
 
     <main class="container">
-        <h1>Votre réservation est confirmée</h1>
-        <a class="btn" href="index.html">retourner à la page d'accueil</a>
+		<div>
+        	<h1>Votre réservation est confirmée</h1>
+		</div>
+		<div id="btn-confirmation">
+        	<a class="btn" href="index.html">retourner à la page d'accueil</a>
+		</div>
     </main>
 
     <footer>
@@ -54,5 +58,5 @@
 			</div>
 		</div>
 	</footer>
-	
+
 </body>
