page menu: ajout section t-shirt (oubli)

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 		</div>
 	</header>
 
-	<main class="container">
+	<main>
+		<section class="container">
 		<h1>MENU</h1>
 		<h2>NOS BURGERS</h2>
 			<div class="flex-container-menu">
@@ -98,13 +99,29 @@
 				<a class="btn" href="#">ajouter au panier</a>
 			</div>
 		</div>
-	</main>
+		</section>
+
+		<section id="t-shirt">
+			<section class="container">
+				<div class="flex-container-t-shirt">
+					<div class="flex-t-shirt">
+						<h2>LE T-SHIRT BURGER SHOP</h2>
+						<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
+						<a class="btn" href="">ajouter au panier</a>
+					</div>
+						<img src="img/t-shirt-removebg-preview.png" alt="">
+					
+				</div>
+			</section>
+		</section>
+	
+	</main> 
 
 	<footer>
-		<section id="footer-black">
+		<section id="footer-white">
 			<div class="container">
-				<div class="flex-footer">
-					<div class="contact">
+				<div class="flex-footer-t-shirt">
+					<div class="contact-black">
 						<p><b>Burger Shop</b> : 3175 Boul. Laviolette, Trois-Rivières, QC</p>
 					</div>
 					<div>
